--- a/src/controls/BlockType/Component/styles.css
+++ b/src/controls/BlockType/Component/styles.css
@@ -1,9 +1,10 @@
 .rdw-block-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
   flex-wrap: wrap
 }
+
 .rdw-block-dropdown {
   width: 110px;
+  height: 1.867em;
 }
