--- a/src/components/Dropdown/Dropdown/styles.css
+++ b/src/components/Dropdown/Dropdown/styles.css
@@ -1,23 +1,13 @@
 .rdw-dropdown-wrapper {
-  height: 30px;
   background: white;
   cursor: pointer;
-  border: 1px solid #F1F1F1;
-  border-radius: 2px;
+  outline: 1px solid #F1F1F1;
   margin: 0 3px;
   text-transform: capitalize;
-  background: white;
-}
-.rdw-dropdown-wrapper:focus {
-  outline: none;
-}
-.rdw-dropdown-wrapper:hover {
-  box-shadow: 1px 1px 0px #BFBDBD;
+  height: 1.867em;
   background-color: #FFFFFF;
 }
-.rdw-dropdown-wrapper:active {
-  box-shadow: 1px 1px 0px #BFBDBD inset;
-}
+
 .rdw-dropdown-carettoopen {
   height: 0px;
   width: 0px;
@@ -28,6 +18,7 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
 }
+
 .rdw-dropdown-carettoclose {
   height: 0px;
   width: 0px;
@@ -38,6 +29,7 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
 }
+
 .rdw-dropdown-selectedtext {
   display: flex;
   position: relative;
@@ -45,19 +37,15 @@
   align-items: center;
   padding: 0 5px;
 }
+
 .rdw-dropdown-optionwrapper {
   z-index: 100;
   position: relative;
-  border: 1px solid #F1F1F1;
-  width: 98%;
+  border-top: 1px solid #F1F1F1;
+  width: 100%;
   background: white;
-  border-radius: 2px;
   margin: 0;
   padding: 0;
   max-height: 250px;
   overflow-y: scroll;
-}
-.rdw-dropdown-optionwrapper:hover {
-  box-shadow: 1px 1px 0px #BFBDBD;
-  background-color: #FFFFFF;
 }
