--- a/src/components/Dropdown/DropdownOption/styles.css
+++ b/src/components/Dropdown/DropdownOption/styles.css
@@ -1,15 +1,17 @@
 .rdw-dropdownoption-default {
-  min-height: 25px;
   display: flex;
   align-items: center;
-  padding: 0 5px;
+  padding: 0.25em 0.5em;
 }
+
 .rdw-dropdownoption-highlighted {
   background: #F1F1F1;
 }
+
 .rdw-dropdownoption-active {
   background: #f5f5f5;
 }
+
 .rdw-dropdownoption-disabled {
   opacity: 0.3;
   cursor: default;
