--- a/src/components/Option/styles.css
+++ b/src/components/Option/styles.css
@@ -1,26 +1,27 @@
 .rdw-option-wrapper {
   border: 1px solid #F1F1F1;
-  padding: 5px;
-  min-width: 25px;
-  height: 20px;
-  border-radius: 2px;
-  margin: 0 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   background: white;
   text-transform: capitalize;
+  width: 1.867em;
+  height: 1.867em;
 }
+
 .rdw-option-wrapper:hover {
-  box-shadow: 1px 1px 0px #BFBDBD;
+  border-color: #000000;
 }
+
 .rdw-option-wrapper:active {
-  box-shadow: 1px 1px 0px #BFBDBD inset;
+  border-color: #000000;
 }
+
 .rdw-option-active {
-  box-shadow: 1px 1px 0px #BFBDBD inset;
+  border-color: #000000;
 }
+
 .rdw-option-disabled {
   opacity: 0.3;
   cursor: default;
