--- a/src/controls/Emoji/Component/styles.css
+++ b/src/controls/Emoji/Component/styles.css
@@ -1,25 +1,22 @@
 .rdw-emoji-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
   position: relative;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  gap: 0.25em;
 }
 .rdw-emoji-modal {
   overflow: auto;
   position: absolute;
   top: 35px;
-  left: 5px;
   display: flex;
   flex-wrap: wrap;
   width: 235px;
   height: 180px;
   border: 1px solid #F1F1F1;
   padding: 15px;
-  border-radius: 2px;
   z-index: 100;
   background: white;
-  box-shadow: 3px 3px 5px #BFBDBD;
 }
 .rdw-emoji-icon {
   margin: 2.5px;
