--- a/src/controls/Link/Component/styles.css
+++ b/src/controls/Link/Component/styles.css
@@ -1,9 +1,9 @@
 .rdw-link-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
   position: relative;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  gap: 0.25em;
 }
 .rdw-link-dropdown {
   width: 50px;
@@ -19,24 +19,20 @@
 .rdw-link-modal {
   position: absolute;
   top: 35px;
-  left: 5px;
   display: flex;
   flex-direction: column;
   width: 235px;
   height: 205px;
   border: 1px solid #F1F1F1;
   padding: 15px;
-  border-radius: 2px;
   z-index: 100;
   background: white;
-  box-shadow: 3px 3px 5px #BFBDBD;
 }
 .rdw-link-modal-label {
   font-size: 15px;
 }
 .rdw-link-modal-input {
   margin-top: 5px;
-  border-radius: 2px;
   border: 1px solid #F1F1F1;
   height: 25px;
   margin-bottom: 15px;
@@ -59,16 +55,15 @@
   width: 75px;
   height: 30px;
   border: 1px solid #F1F1F1;
-  border-radius: 2px;
   cursor: pointer;
   background: white;
   text-transform: capitalize;
 }
 .rdw-link-modal-btn:hover {
-  box-shadow: 1px 1px 0px #BFBDBD;
+  border-color: #000000;
 }
 .rdw-link-modal-btn:active {
-  box-shadow: 1px 1px 0px #BFBDBD inset;
+  border-color: #000000;
 }
 .rdw-link-modal-btn:focus {
   outline: none !important;
