--- a/src/controls/List/Component/styles.css
+++ b/src/controls/List/Component/styles.css
@@ -1,13 +1,15 @@
 .rdw-list-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  gap: 0.25em;
 }
+
 .rdw-list-dropdown {
   width: 50px;
   z-index: 90;
 }
+
 .rdw-list-dropdownOption {
   height: 40px;
   display: flex;
