--- a/src/controls/Remove/Component/styles.css
+++ b/src/controls/Remove/Component/styles.css
@@ -1,7 +1,7 @@
 .rdw-remove-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
   position: relative;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  gap: 0.25em;
 }
