--- a/src/decorators/Mention/Suggestion/styles.css
+++ b/src/decorators/Mention/Suggestion/styles.css
@@ -14,7 +14,7 @@
 }
 .rdw-suggestion-option {
   padding: 7px 5px;
-  border-bottom: 1px solid #f1f1f1;
+  border-bottom: 1px solid #F1F1F1;
 }
 .rdw-suggestion-option-active {
   background-color: #F1F1F1;
